--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <body>
         <canvas class="canvas" height="300" width="400" style="background-color: black;"></canvas>
     </body>
+    <script type="text/javascript" src="draw.js"></script>
 </html>
