#3 snake.js and fruit.js added
snake.js :
- draw(), update(), chngDirection(), eat()

fruit.js :
- location(), drawFruit()

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <canvas class="canvas" height="300" width="400" style="background-color: black;"></canvas>
     </body>
+    <script type="text/javascript" src="fruit.js"></script>
+    <script type="text/javascript" src="snake.js"></script>
     <script type="text/javascript" src="draw.js"></script>
 </html>
