--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>$nake Game</title>
+        <title>Sssnake game</title>
     </head>
 
     <body>
         <canvas class="canvas" height="300" width="400" style="background-color: black;"></canvas>
+        <h1 class="score"></h1>
     </body>
     <script type="text/javascript" src="fruit.js"></script>
     <script type="text/javascript" src="snake.js"></script>
